--- a/src/modules/users/components/searchTools/styles/SearchClients.css
+++ b/src/modules/users/components/searchTools/styles/SearchClients.css
@@ -1,17 +1,21 @@
-.SearchClients-section {
+.SearchClients-section{
+  position: absolute;
+  top: 80px;
+  left: 180px;
+} 
+
+.SearchClients-section-container{
     width: 100%;
     height: 100%;
-    margin-top: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    left: 750px;
+    position: absolute;
     color: #a0a0a0;
   }
   
-  .SearchClients-input[type="text"] {
-    position: relative;
-    padding: 15px 30px 15px 10px;
-    width: 120px;
+  .SearchClients-input[type=text]{
+    position: absolute;
+    padding: 20px 30px 15px 20px;
+    width: 180px;
     color: #00ddfa;
     text-transform: uppercase;
     font-size: 16px;
@@ -19,26 +23,222 @@
     letter-spacing: 2px;
     border: none;
     border-radius: 1rem;
-    background: #1c1c1c;
+    background:#1c1c1c ;
     transition: width 0.4s ease;
     outline: none;
-  
-    &:focus {
-      width: 300px;
-    }
+    
+    &:focus{ width: 300px; }
   }
-  
-  .SearchClients-IconButton {
+  .SearchClients-IconButton{
     position: relative;
-    left: -37px;
-    color: #00ddfa;
+    top: 0px;
+    left: -0px;
+    color:#00ddfa;
+    background:#1c1c1c ;
   }
-  
-  .SearchClients-icon-search {
+
+  .SearchClients-icon-search{
     height: 25px;
     width: 25px;
     color: #00ddfa;
     border-radius: 25px;
+ }
+  
+  @media screen and (min-device-width: 412px) and (max-device-width: 915px) {
+    .SearchClients-section{
+      top: 20px;
+      left: 120px;
+      background-color: #1c1c1c;
+      height: 45px;
+      width: 130px;
+      border-radius: 1rem;
+     
+    }
+  
+    .SearchClients-section-container{
+      width: 100%;
+      height: 100%;
+      left: -25px;
+      position: absolute;
+      color: #a0a0a0;
+      display:flex;
+      background:#1c1c1c ;
+      border-radius: 1rem;
+    }
+    
+    .SearchClients-input[type=text]{
+      position: absolute;
+      margin: 0px 0px 0px 25px;
+      padding: 15px 5px 15px 20px;
+      width: 120px;
+      color: #00ddfa;
+      text-transform: uppercase;
+      font-size: 12px;
+      font-weight: 100;
+      letter-spacing: 2px;
+      &:focus{ width: 200px; }
+    }
+    .SearchClients-IconButton{
+      position: absolute;
+      top: 0px;
+      left: -0px;
+      width: 50px;
+      height: 50px;
+      color:#00ddfa;
+      background:#1c1c1c ;
+    }
+  
+    .SearchClients-icon-search{
+      height: 100%;
+      width: 100%;
+      color: #00ddfa;
+      
+      /* border-radius: 25px; */
+      background:#1c1c1c ;
+   }
+   
+   }
+   @media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
+    .SearchClients-section{
+      top: 20px;
+      left: 330px;
+      background-color: #1c1c1c;
+      height: 45px;
+      width: 130px;
+      border-radius: 1rem;
+    }
+  
+    .SearchClients-section-container{
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      color: #a0a0a0;
+      display:flex;
+      background:#1c1c1c ;
+      border-radius: 1rem;
+    }
+    
+    .SearchClients-input[type=text]{
+      position: absolute;
+      margin: 0px 0px 0px 25px;
+      padding: 15px 5px 15px 20px;
+      width: 120px;
+      color: #00ddfa;
+      text-transform: uppercase;
+      font-size: 12px;
+      font-weight: 100;
+      letter-spacing: 2px;
+      &:focus{ width: 200px; }
+    }
+    .SearchClients-IconButton{
+      position: absolute;
+      top: 0px;
+      left: -0px;
+      width: 50px;
+      height: 50px;
+      color:#00ddfa;
+      background:#1c1c1c ;
+    }
+  
+    .SearchClients-icon-search{
+      height: 100%;
+      width: 100%;
+      color: #00ddfa;
+      
+      /* border-radius: 25px; */
+      background:#1c1c1c ;
+   }
+   }
+   
+    
+  
+  
+  
+  @media screen and (min-device-width: 1080px) {
+   
+    .SearchClients-section{
+      top: 50px;
+      left: 960px;
+      background-color: #1c1c1c;
+      height: 45px;
+      width: 150px;
+      border-radius: 1rem;
+     
+    }
+  
+    .SearchClients-section-container{
+      width: 100%;
+      height: 100%;
+      left: 25px;
+      position: absolute;
+      color: #a0a0a0;
+      display:flex;
+      background:#1c1c1c ;
+      border-radius: 1rem;
+    }
+    
+    .SearchClients-input[type=text]{
+      position: absolute;
+      margin: 0px 0px 0px 25px;
+      padding: 15px 5px 15px 20px;
+      width: 140px;
+      color: #00ddfa;
+      text-transform: uppercase;
+      font-size: 12px;
+      font-weight: 100;
+      letter-spacing: 2px;
+      &:focus{ width: 220px; }
+    }
+    .SearchClients-IconButton{
+      position: absolute;
+      width: 50px;
+      height: 50px;
+      color:#00ddfa;
+      background:#1c1c1c ;
+    }
+  
+    .SearchClients-icon-search{
+      height: 100%;
+      width: 100%;
+      color: #00ddfa;
+      background:#1c1c1c ;
+   }
   }
   
+  @media screen and  (min-device-width: 1920px) and (max-device-width: 1200px) {
+    .SearchClients-section{
+      position: absolute;
+      top: 80px;
+      left: 200px;
+    }
+    
+    .SearchClients-section-container{
+        width: 100%;
+        height: 100%;
+        margin-top: 20px;
+        left: 350px;
+        position: absolute;
+        color: #a0a0a0;
+      }
+      
+      .SearchClients-input[type=text]{
+        position: absolute;
+        padding: 20px 30px 15px 20px;
+        width: 180px;
+        color: #00ddfa;
+        text-transform: uppercase;
+        font-size: 16px;
+        font-weight: 100;
+        letter-spacing: 2px;
+        border: none;
+        border-radius: 10px;
+        background:#1c1c1c ;
+        transition: width 0.4s ease;
+        outline: none;
+        
+        &:focus{ width: 300px; }
+      }
+   }
+   
   
+   
