--- a/src/modules/users/components/dashboard/styles/DashboardMenuCentral.css
+++ b/src/modules/users/components/dashboard/styles/DashboardMenuCentral.css
@@ -199,18 +199,15 @@
 
 
 @media screen and (min-device-width: 412px) and (max-device-width: 914px) {
-  /*.DashboardMenuCentral{
-    display: flex;
-    flex-direction: column;
-  }*/
+
   .DashboardMenuCentral-LogoPrincipal{
     padding: 0px;
     border: 1px solid #05050500;
     width:80px;
     height: 90px;
     position: relative; 
-    top:-150px ;
-    left: -145px;
+    top:  -200px ;
+    left: -175px;
    
   }
   .DashboardMenuCentral-logo-Ziriuz{
@@ -230,7 +227,7 @@
     border-radius: 30px;
     display: flex;
     flex-direction: column;
-    top: -120px;
+    top: 90px;
     right:25px ;
    
   }
@@ -244,39 +241,6 @@
   
 }
 
-/*@media screen and (min-device-width: 412px) and (max-device-width: 914px) {
-  .DashboardMenuCentral-LogoPrincipal{
-    padding: 0px;
-    border: 1px solid #05050500;
-    width:80px;
-    height: 90px;
-    position: relative;
-    
-  }
-  .DashboardMenuCentral-logo-Ziriuz{
-    width:150px;
-    height:100px;
-  }
-  .DashboardMenuCentral-button{
-    height: 40px;
-    width: 40px;
-  }
-  .DashboardMenuCentral-nav{
-    height: 200px;
-    width: 80vh;
-    position: relative;
-    text-align: center;
-    background-color:#28292d;
-    border-radius: 30px;
-  }
-  .DashboardMenuCentral-nav-li{
-    display: flex;
-    flex-wrap: nowrap;
-    margin: 10px;
-
-  }
-  
-}*/
 
 @media screen and (min-device-width: 600px) and (max-device-width: 845px){
   .DashboardMenuCentral-LogoPrincipal{
@@ -314,37 +278,43 @@
   }
 }
 @media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
+  .DashboardMenuCentral-LogoPrincipal{
+    padding: 0px;
+    border: 1px solid #05050500;
+    width:110px;
+    height: 100px;
+    position: relative; 
+    top:  -200px ;
+    left: -175px;
+   
+  }
+  .DashboardMenuCentral-logo-Ziriuz{
+    width:170px;
+    height:130px;
+  }
   .DashboardMenuCentral-button{
-    height: 80px;
+    height: 70px;
     width: 80px;
   }
   .DashboardMenuCentral-nav{
     height: 400px;
-    width: 100vh;
+    width: 60vh;
     position: relative;
     text-align: center;
     background-color:#28292d;
     border-radius: 30px;
-  }
-}
-
-@media screen and (min-device-width: 1920px) and (max-device-width: 1080px) {
-  .DashboardMenuCentral-button{
-    height: 80px;
-    width: 80px;
-  }
-  .DashboardMenuCentral-nav{
-    height: 200px;
-    width: 80vh;
-    position: relative;
-    text-align: center;
-    background-color:#28292d;
-    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    top: 90px;
+    right:25px ;
+   
   }
   .DashboardMenuCentral-nav-li{
     display: flex;
+    flex-direction: column;
     flex-wrap: wrap;
-    margin: 0 10px;
+    margin: 10px;
+
   }
 }
 /* Extra large devices (large laptops and desktop, 1200px and up */
