--- a/src/modules/users/pages/styles/ClientsPages.css
+++ b/src/modules/users/pages/styles/ClientsPages.css
@@ -134,11 +134,13 @@
 	
   .ClientsPages-Container-Card{
     width: 90%;
-    height: 100%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     padding:0;
-    list-style: none
+    list-style: none;
+    position:absolute;
+    top: 45px;
   }
   .ClientsPages-card {
     align-self: center;
@@ -187,17 +189,20 @@
   @media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
   .ClientsPages-Container-Card{
     width: 90%;
-    height: 100%;
+    height: 60%;
     display: flex;
     flex-direction: column;
     padding:0;
-    list-style: none
+    list-style: none;
+    position:absolute;
+    top: 45px;
   }
   .ClientsPages-card {
     align-self: center;
     border-radius:  20px;
     padding: 5px;
     position: relative;
+    top: 25px;
     left: 190px;
     height: 220px;
     width: 250px;
