--- a/src/modules/users/pages/styles/UsersPages.css
+++ b/src/modules/users/pages/styles/UsersPages.css
@@ -143,6 +143,8 @@
 	@media screen and (min-device-width: 412px) and (max-device-width: 914px) {
 	
 		.UserPages-Container-Card{
+			position: relative;
+			top:40px;
 			width: 90%;
 			height: 100%;
 			display: flex;
@@ -197,6 +199,8 @@
 	  }
 	  @media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
 		.UserPages-Container-Card{
+			position: relative;
+			top: 60px;
 			width: 90%;
 			height: 100%;
 			display: flex;
@@ -223,6 +227,8 @@
 	  @media screen and (min-device-width: 1920px) and (max-device-width: 1080px) {
 	  
 		.UsersPages-cards-list{
+			margin-top: 50px;
+			padding-top: 40px;
 			display:grid;
 			grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
 			gap:2rem;
