--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body
 }
 
 body {
-    min-height: 100vh;
+    min-height: 100%;
     
   }
 
@@ -46,7 +46,7 @@ body {
 
 
 .App-blob-c {
-	min-height: 100vh;
+	min-height: 100%;
 	overflow: hidden;
 	position:absolute;
 	width: 100%;
