--- a/src/modules/users/pages/styles/UsersPages.css
+++ b/src/modules/users/pages/styles/UsersPages.css
@@ -253,7 +253,7 @@
 		}
 	  }
 	  
-	  @media screen and  (min-device-width: 1920px) and (max-device-width: 1200px) {
+	  @media screen and  (min-device-width: 1200px) {
 	   
 		.usercard {
 		  width: 360px;
