--- a/src/modules/users/components/dashboard/styles/DashboardMenuCentral.css
+++ b/src/modules/users/components/dashboard/styles/DashboardMenuCentral.css
@@ -214,7 +214,7 @@
     width: 50px;
   }
   .DashboardMenuCentral-nav{
-    
+    height: 68vh;
     width: 30vh;
     position: absolute;
     text-align: center;
@@ -224,7 +224,7 @@
     flex-direction: column;
     top: 30%;
     right:45px ;
-   overflow: auto;
+    overflow-y: scroll;
    
   } 
   .DashboardMenuCentral-nav-li{
@@ -256,7 +256,15 @@
     left:-28%;
     top: 25%;
   }
- 
+  .acordeon-content {
+    text-align: center;
+    max-height: 0;
+    background: #28292d;
+    border-radius: 15px;
+    -webkit-transition: max-height .35s;
+    transition: max-height .35s;
+    overflow: hidden;
+  }
   
 }
 
@@ -288,12 +296,22 @@
     background-color:#28292d;
     border-radius: 30px;
     top: -120px;
+
   }
   .DashboardMenuCentral-nav-li{
     display: flex;
     flex-wrap: nowrap;
     margin: 10px;
 
+  }
+  .acordeon-content {
+    text-align: center;
+    max-height: 0;
+    background: #28292d;
+    border-radius: 15px;
+    -webkit-transition: max-height .35s;
+    transition: max-height .35s;
+    overflow: hidden;
   }
 }
 @media screen and (min-device-width: 820px) and (max-device-width: 1180px) {
@@ -315,43 +333,86 @@
     height: 90px;
     width: 90px;
   }
-  .DashboardMenuCentral-nav{
-    height: 100%;
-    width: 60vh;
-    position: relative;
-    text-align: center;
-    background-color:#28292d;
-    border-radius: 30px;
-    display: flex;
-    flex-direction: column;
-    top: 90px;
-    right:25px ;
-   
-  }
-  .DashboardMenuCentral-nav-li{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    margin: 5px;
 
-  }
-  .DashboardMenuCentral-a{
-    position: relative;
-    display: inline-block;
-    padding: 25px 25px;
-    margin: 5px;
-    color: #03e9f4;
-    text-decoration: none;
-    text-transform: uppercase;
-    transition: 0.5s;
-    letter-spacing: 4px;
-    overflow: hidden;
-    margin-right: 50px;
-    left: 345px;
-  }
-  
 input:checked ~ .acordeon-content {
   max-height: 25em;
+}
+.DashboardMenuCentral-nav{
+  height: 60vh;
+  width: 110vh;
+  padding: 10px;
+  position: relative;
+  text-align: center;
+  background-color:#28292d;
+  border-radius: 30px;
+  display: flex;
+  flex-direction: column;
+  top: 190px;
+  right:35px ;
+  overflow-y: scroll;
+
+ 
+}
+.DashboardMenuCentral-nav-li{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  margin: 5px;
+
+}
+.DashboardMenuCentral-a{
+  position: absolute;
+  display: inline-block;
+  padding: 25px 25px;
+  margin: 5px;
+  color: #03e9f4;
+  text-decoration: none;
+  text-transform: uppercase;
+  transition: 0.5s;
+  letter-spacing: 4px;
+  overflow: hidden;
+  margin-right: 50px;
+  left: -1px;
+  top: -115px;
+}
+::-webkit-scrollbar{
+  color: #00ddfa;
+}
+.acordeon {
+  height: 100%;
+  position: relative;
+  width: 100%;
+  color: #00ddfa;
+  top: 10%;
+  
+}
+
+.acordeon-content {
+text-align: center;
+max-height: 0;
+background: #28292d;
+border-radius: 15px;
+-webkit-transition: max-height .35s;
+transition: max-height .35s;
+overflow: hidden;
+}
+.acordeon {
+  height: 100%;
+  position: relative;
+  width: 100%;
+  color: #00ddfa;
+  top: 10%;
+  
+}
+
+.acordeon-content {
+text-align: center;
+max-height: 0;
+background: #28292d;
+border-radius: 15px;
+-webkit-transition: max-height .35s;
+transition: max-height .35s;
+overflow: hidden;
 }
 }
 /* Extra large devices (large laptops and desktop, 1200px and up */
@@ -379,7 +440,7 @@ input:checked ~ .acordeon-content {
     width: 90px;
   }
   .DashboardMenuCentral-nav{
-    height: auto;
+    height: 60vh;
     width: 110vh;
     padding: 10px;
     position: relative;
@@ -391,8 +452,8 @@ input:checked ~ .acordeon-content {
     top: 190px;
     right:35px ;
     overflow-y: scroll;
-    scroll-behavior: auto;
-    
+
+   
   }
   .DashboardMenuCentral-nav-li{
     display: flex;
@@ -426,9 +487,6 @@ input:checked ~ .acordeon-content {
     
   }
 
-/* .DashboardMenuCentral-nav::-webkit-scrollbar{
-  border: #03e9f4;
-} */
 .acordeon-content {
   text-align: center;
   max-height: 0;
@@ -436,6 +494,7 @@ input:checked ~ .acordeon-content {
   border-radius: 15px;
   -webkit-transition: max-height .35s;
   transition: max-height .35s;
+  overflow: hidden;
 }
 
 .acordeon-content p {
@@ -489,11 +548,12 @@ input:checked ~ .acordeon-content {
 .acordeon-content {
   text-align: center;
   max-height: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
   background: #28292d;
   border-radius: 15px;
   -webkit-transition: max-height .35s;
   transition: max-height .35s;
+
 }
 
 .acordeon-content p {
