--- a/src/modules/equipos/components/searchEquiposTools/styles/SearchEquipos.css
+++ b/src/modules/equipos/components/searchEquiposTools/styles/SearchEquipos.css
@@ -1,6 +1,8 @@
 .SearchEquipos-section-container{
-    width: 100%;
-    height: 100%;
+    width: 33%;
+    position: absolute;
+    top: 4%;
+    left: 25%;
     margin-top: 20px;
     display: flex;
     justify-content: center;
@@ -9,9 +11,9 @@
   }
   
   .SearchEquipos-input[type=text]{
-    position: relative;
+    position: absolute;
     padding: 15px 30px 15px 10px;
-    width: 120px;
+    width: 35%;
     color: #00ddfa;
     text-transform: uppercase;
     font-size: 16px;
@@ -26,16 +28,17 @@
     &:focus{ width: 300px; }
   }
   .SearchEquipos-IconButton{
-    position: relative;
-    left: -37px;
+    position: absolute;
+    left: 5%;
+    top: 5%;
     color:#00ddfa;
+  
   }
 
   .SearchEquipos-icon-search{
+  
     height: 25px;
-    width: 25px;
-    
-   
+    width: 25px;   
     color: #00ddfa;
     border-radius: 25px;
  }
