--- a/src/modules/equipos/pages/styles/EquiposPages.css
+++ b/src/modules/equipos/pages/styles/EquiposPages.css
@@ -1,26 +1,27 @@
 .EquipoCard-box {
-    height: 169px;
-    width: 551px;
+    height: 16%;
+    width: 30%;
   }
   
   .EquipoCard-box .EquipoCard-equipospages {
-    height: 169px;
+    height: 16%;
     left: 0;
     top: 0;
-    width: 551px;
+    width: 30%;
   }
   
   .EquipoCard-box .EquipoCard-overlap {
     height: 169px;
-    position: relative;
+    position: absolute;
+    padding: 1%;
   }
   
   .EquipoCard-box .EquipoCard-equipospages-card {
-    height: 150px;
+    height: 15%;
     left: 4px;
     position: absolute;
     top: 9px;
-    width: 546px;
+    width: 33%;
   }
   
   .EquipoCard-box .EquipoCard-overlap-group {
@@ -59,13 +60,13 @@
     font-family: "Poppins-Regular", Helvetica;
     font-size: 16px;
     font-weight: 400;
-    left: 186px;
+    left: 36%;
     letter-spacing: 0.02px;
     line-height: normal;
     position: absolute;
     top: 43px;
     white-space: nowrap;
-    width: 160px;
+    width: 30%;
   }
   
   .EquipoCard-box .EquipoCard-overlap-2 {
@@ -161,24 +162,32 @@
 	grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
 	gap:2rem;
 	margin:4rem 5vw;
-	padding:0;
+	padding:1%;
 	list-style: none;
 	
   }
 
   .EquiposPages-Container-Card{
-    width: 1200px;
-    height: 100%;
+    position: absolute;
+    left: 3.5%;
+    top: 25%;
+    width: 100%;
+    height: 95%;
     display:grid;
     grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
     gap:2rem;
-    margin:2rem 3vw;
-    padding:0;
+    margin:0.5%;
+    padding:1%;
     list-style: none
   }
 
 
 .EquiposPages-container{
-    width: 1200px;
+  width: 100%;
 	height: 100%;
 }
+
+
+/*----------------------------- medias  -------------------------*/
+
+
